edit method for delete
